# DIF

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.ac  libtool  reconf  selectflags.pl  selectlibs.pl
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
contrib/: Makefile  Makefile.am  Makefile.in
contrib/Healpix/: Makefile
contrib/Healpix/HealP3/: Makefile  healpix_base.cc  healpix_base.h
contrib/Spherematch/: Makefile  spherematch2.cc
contrib/Spherematch/Save/: spherematch2_1to1.cc  spherematch2_1ton.cc  spherematch2_mm.cc  spherematch2_rm_next_dup.cc_sav  spherematch2_v0.cc  spherematch2_v1.cc  spherematch2_v2.cc  spherematch2_v3.cc  spherematch2_v4.cc  spherematch2_v5.cc  testspm.cc_sav
contrib/Spherematch/src/: Makefile  Makefile.darwin  Makefile.linux  chunkfriendsoffriends.c  chunks.c  chunks.h  friendsoffriends.c  friendsoffriends.h  pappo.cc  rarange.c  separation.c  spheregroup.c  spherematch.c  spherematch2.cc  spherematch2_dev.cc  testspm  testspm.cc
contrib/htmIndex/: Makefile  README
contrib/htmIndex/app/: Makefile.irix  Makefile.linux  Makefile.osf  Makefile.solaris  Myintersect.cpp  Myintersect.cpp_s  Mylookup.cpp  echoDomain.cpp  htmTest.cpp  intersect.cpp  lookup  lookup.cpp  rectEx.cpp  sqlExample.cpp  timeHTM.cpp
contrib/htmIndex/doc/: Makefile  example1  example2  example3  example4
contrib/htmIndex/doc/www/: Makefile
contrib/htmIndex/etc/: Makefile  copyright.html
contrib/htmIndex/include/: BitList.h  BitList.hxx  Makefile  SpatialConstraint.h  SpatialConstraint.hxx  SpatialConvex.h  SpatialConvex.h_v3MD  SpatialConvex.h_voids  SpatialConvex.hxx  SpatialDoc.h  SpatialDomain.h  SpatialDomain.h_v3MD  SpatialDomain.hxx  SpatialEdge.h  SpatialException.h  SpatialGeneral.h  SpatialIndex.h  SpatialIndex.hxx  SpatialInterface.h  SpatialInterface.hxx  SpatialVector.h  SpatialVector.hxx  VarCmp.h  VarStr.h  VarStr.hpp  VarStr.hxx  VarVec.h  VarVecDef.h  classHeader.inc  hierHeader.inc  indexHeader.inc  sqlInterface.h  sqlInterface.hxx
contrib/htmIndex/lib/: Makefile
contrib/htmIndex/src/: BitList.cpp  Makefile  Makefile.darwin  Makefile.irix  Makefile.osf  Makefile.solaris  SpatialConstraint.cpp  SpatialConvex.cpp  SpatialConvex.cpp_debug  SpatialConvex.cpp_v0  SpatialConvex.cpp_v1  SpatialConvex.cpp_v2  SpatialConvex.cpp_v3MD  SpatialConvex.cpp_voids  SpatialDomain.cpp  SpatialDomain.cpp_v3MD  SpatialEdge.cpp  SpatialException.cpp  SpatialIndex.cpp  SpatialInterface.cpp  SpatialVector.cpp  VarCmp.cpp  instances.cpp  sqlInterface.cpp
doc/: Makefile  Makefile.am  Makefile.in  README.md  dif.aux  dif.dvi  dif.tex  dif.toc
doc/html/: README.md  difmain.html  diftab.html  index.html
doc/includes/: Makefile  fktimes1m_2.eps  fktimes_2.eps  hpx_cart.eps  hpx_draw_k0.eps  htm6-10neighb_plot.eps  htm8-10neighb_plot.eps  htm_draw_d0-d4.eps  schema.eps  schema.fig  schema2.fig  schema2.fig.bak  schema_old.eps  schema_old.fig  schema_tmp.fig
doc/other/: demo.sql  demo.sql~  demo_manual_dif.sql  depth1  depths.csv  depths.ods  dif.sql  loc-mysql-install.txt  messier.tsv  messier_legend.tsv
scripts/: Makefile  Makefile.am  Makefile.in  dif.in
sql/: DIF_View.sql  DIF_check.sql  DIF_create_dif.sql  DIF_deinstall.sql  DIF_udf.sql  Makefile  Makefile.am  Makefile.in  Messier.sql  Messier.sql.in  func_insert.sql  funcdesc  funcdesc.sql  funcdesc.sql.in  messier_insert.sql
src/: ChangeLog  DIFgetHTMNeighbC.cpp  DIFgetHTMsNeighb.cpp  DIFgetHealPNeighbC.cpp  DIFhtmCircleRegion.cpp  DIFhtmRectRegion.cpp  DIFmyHealPCone.cpp  DIFmyHealPRect.cpp  Makefile  Makefile.am  Makefile.in  binlog_config.h  binlog_config.h.in  config.h  config.h.in~  deg_radec.c  dif.hh  difflist_i.cpp  fakesky_H6.cc  fakesky_HPx.cc  fakesky_RND.cc  getHTMBary.cpp  getHTMBaryC.cpp  getHTMBaryDist.cpp  getHTMNeighb.cpp  getHTMNeighbC.cpp  getHTMid.cpp  getHTMidByName.cpp  getHTMnameById.cpp  getHTMsNeighb.cpp  getHealPBary.cpp  getHealPBaryC.cpp  getHealPBaryDist.cpp  getHealPBound.cpp  getHealPBoundC.cpp  getHealPMaxS.cpp  getHealPNeighb.cpp  getHealPNeighbC.cpp  getHealPid.cpp  ha_dif.cc  (+19 more)
